--- a/angular-projektas/src/app/server/server.component.html
+++ b/angular-projektas/src/app/server/server.component.html
@@ -2,3 +2,4 @@
 [ngClass]="{'online': serverStatus === 'ijungtas'}">
   serveris su id {{ serverId }} yra {{ getServerStatus() }}
 </p>
+<p>aaaa</p>
